Fixed chat overflow bug

--- a/src/stylesheets/main-page.css
+++ b/src/stylesheets/main-page.css
@@ -66,7 +66,13 @@ html, body {
 #chat-container {
     min-height: 30vh;
     max-height: 100%;
-    position: relative;
+    position: absolute;
+}
+
+#chat-area {
+    height: 90%; 
+    max-height: 90%;
+    overflow-y: scroll;
 }
 
 /*@media (max-width: 1170px) { */
